--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -718,6 +718,8 @@
   "SignupForm.lastNameLabel": "Last name",
   "SignupForm.lastNamePlaceholder": "Doe",
   "SignupForm.lastNameRequired": "You need to add a last name.",
+  "SignupForm.hobbiesLabel": "Hobbies",
+  "SignupForm.hobbiesPlaceholder": "programming",
   "SignupForm.passwordLabel": "Password",
   "SignupForm.passwordPlaceholder": "Enter your password…",
   "SignupForm.passwordRequired": "You need to add a password.",
