Edit user hobbies field

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -624,10 +624,13 @@
   "ProfileSettingsForm.lastNameLabel": "Nachname",
   "ProfileSettingsForm.lastNamePlaceholder": "Mustermann",
   "ProfileSettingsForm.lastNameRequired": "Dieses Feld ist erforderlich.",
+  "ProfileSettingsForm.hobbiesLabel": "Hobbys",
+  "ProfileSettingsForm.hobbiesPlaceholder": "programmierung",
   "ProfileSettingsForm.saveChanges": "Änderungen speichern",
   "ProfileSettingsForm.tip": "Tipp: Verwende ein Foto, auf dem dein Gesicht erkennbar ist.",
   "ProfileSettingsForm.updateProfileFailed": "Hoppla, etwas ist schiefgelaufen. Bitte versuche es erneut.",
   "ProfileSettingsForm.yourName": "Dein Name",
+  "ProfileSettingsForm.yourHobbies": "Deine Hobbys",
   "ProfileSettingsForm.yourProfilePicture": "Dein Profilbild",
   "ProfileSettingsPage.heading": "Profileinstellungen",
   "ProfileSettingsPage.title": "Profileinstellungen",
