--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -624,10 +624,13 @@
   "ProfileSettingsForm.lastNameLabel": "Last name",
   "ProfileSettingsForm.lastNamePlaceholder": "Doe",
   "ProfileSettingsForm.lastNameRequired": "This field is required.",
+  "ProfileSettingsForm.hobbiesLabel": "Hobbies",
+  "ProfileSettingsForm.hobbiesPlaceholder": "programming",
   "ProfileSettingsForm.saveChanges": "Save changes",
   "ProfileSettingsForm.tip": "Tip: Use a photo where your face is recognizable.",
   "ProfileSettingsForm.updateProfileFailed": "Oops, something went wrong. Please try again.",
   "ProfileSettingsForm.yourName": "Your name",
+  "ProfileSettingsForm.yourHobbies": "Your hobbies",
   "ProfileSettingsForm.yourProfilePicture": "Your profile picture",
   "ProfileSettingsPage.heading": "Profile settings",
   "ProfileSettingsPage.title": "Profile settings",
