--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -624,10 +624,13 @@
   "ProfileSettingsForm.lastNameLabel": "Apellido",
   "ProfileSettingsForm.lastNamePlaceholder": "Doe",
   "ProfileSettingsForm.lastNameRequired": "Este campo es obligatorio.",
+  "ProfileSettingsForm.hobbiesLabel": "Aficiones",
+  "ProfileSettingsForm.hobbiesPlaceholder": "programación",
   "ProfileSettingsForm.saveChanges": "Guardar cambios",
   "ProfileSettingsForm.tip": "Consejo: utiliza una foto en la que tu rostro sea reconocible.",
   "ProfileSettingsForm.updateProfileFailed": "Algo salió mal. Inténtalo de nuevo.",
   "ProfileSettingsForm.yourName": "Tu nombre",
+  "ProfileSettingsForm.yourHobbies": "Tus aficiones",
   "ProfileSettingsForm.yourProfilePicture": "Imagen de perfil",
   "ProfileSettingsPage.heading": "Configuración de perfil",
   "ProfileSettingsPage.title": "Configuración de perfil",
