--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -624,10 +624,13 @@
   "ProfileSettingsForm.lastNameLabel": "Nom",
   "ProfileSettingsForm.lastNamePlaceholder": "Doe",
   "ProfileSettingsForm.lastNameRequired": "Ce champ est obligatoire",
+  "ProfileSettingsForm.hobbiesLabel": "Les loisirs",
+  "ProfileSettingsForm.hobbiesPlaceholder": "programmation",
   "ProfileSettingsForm.saveChanges": "Enregistrer",
   "ProfileSettingsForm.tip": "Astuce : Utilisez une photo sur laquelle votre visage est reconnaissable.",
   "ProfileSettingsForm.updateProfileFailed": "Oups, quelque chose n'a pas fonctionné. Veuillez réessayer.",
   "ProfileSettingsForm.yourName": "Votre nom",
+  "ProfileSettingsForm.yourHobbies": "Vos loisirs",
   "ProfileSettingsForm.yourProfilePicture": "Votre photo de profil",
   "ProfileSettingsPage.heading": "Profil",
   "ProfileSettingsPage.title": "Profil",
