Display user hobbies in user profile page

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -599,12 +599,14 @@
   "ProductOrderForm.selectQuantityOption": "Auswählen…",
   "ProductOrderForm.shippingOption": "Versand",
   "ProfilePage.desktopHeading": "Hallo, ich bin {name}.",
+  "ProfilePage.desktopSubheading": "Meine Hobbys: {hobbies}",
   "ProfilePage.editProfileLinkDesktop": "Profil bearbeiten",
   "ProfilePage.editProfileLinkMobile": "Bearbeiten",
   "ProfilePage.listingsTitle": "Meine Einträge ({count})",
   "ProfilePage.loadingDataFailed": "Hoppla, etwas ist schiefgelaufen. Bitte versuche es erneut.",
   "ProfilePage.loadingReviewsFailed": "Fehler beim Laden der Bewertungen.",
   "ProfilePage.mobileHeading": "{name}",
+  "ProfilePage.mobileSubheading": "Hobbys: {hobbies}",
   "ProfilePage.reviewsAsACustomerTitle": "Bewertungen als Kunde/Kundin ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Bewertungen von Kunden/Kundinnen ({count})",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
