--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -599,12 +599,14 @@
   "ProductOrderForm.selectQuantityOption": "Seleccionar...",
   "ProductOrderForm.shippingOption": "Envío",
   "ProfilePage.desktopHeading": "Hola, soy {name}.",
+  "ProfilePage.desktopSubheading": "Mis aficiones: {hobbies}",
   "ProfilePage.editProfileLinkDesktop": "Editar perfil",
   "ProfilePage.editProfileLinkMobile": "Editar",
   "ProfilePage.listingsTitle": "Mis anuncios ({count})",
   "ProfilePage.loadingDataFailed": "Algo salió mal. Inténtalo de nuevo.",
   "ProfilePage.loadingReviewsFailed": "Error al cargar las evaluaciones.",
   "ProfilePage.mobileHeading": "{name}",
+  "ProfilePage.mobileSubheading": "Aficiones: {hobbies}",
   "ProfilePage.reviewsAsACustomerTitle": "Evaluaciones como cliente ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Evaluaciones de clientes ({count})",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
