--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -599,12 +599,14 @@
   "ProductOrderForm.selectQuantityOption": "Sélectionnez",
   "ProductOrderForm.shippingOption": "Transport",
   "ProfilePage.desktopHeading": "Bonjour, je suis {name}.",
+  "ProfilePage.desktopSubheading": "Mes loisirs: {hobbies}",
   "ProfilePage.editProfileLinkDesktop": "Modifier le profil",
   "ProfilePage.editProfileLinkMobile": "Éditer",
   "ProfilePage.listingsTitle": "Mes annonces ({count})",
   "ProfilePage.loadingDataFailed": "Oups, quelque chose n'a pas fonctionné. Veuillez réessayer.",
   "ProfilePage.loadingReviewsFailed": "Impossible de charger les annonces.",
   "ProfilePage.mobileHeading": "{name}",
+  "ProfilePage.mobileSubheading": "Les loisirs: {hobbies}",
   "ProfilePage.reviewsAsACustomerTitle": "Avis en tant que client ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Avis des clients ({count})",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
