--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -599,12 +599,14 @@
   "ProductOrderForm.selectQuantityOption": "Select...",
   "ProductOrderForm.shippingOption": "Shipping",
   "ProfilePage.desktopHeading": "Hello, I'm {name}.",
+  "ProfilePage.desktopSubheading": "My hobbies: {hobbies}",
   "ProfilePage.editProfileLinkDesktop": "Edit profile",
   "ProfilePage.editProfileLinkMobile": "Edit",
   "ProfilePage.listingsTitle": "My listings ({count})",
   "ProfilePage.loadingDataFailed": "Oops, something went wrong. Please try again.",
   "ProfilePage.loadingReviewsFailed": "Loading reviews failed.",
   "ProfilePage.mobileHeading": "{name}",
+  "ProfilePage.mobileSubheading": "Hobbies: {hobbies}",
   "ProfilePage.reviewsAsACustomerTitle": "Reviews as a customer ({count})",
   "ProfilePage.reviewsFromMyCustomersTitle": "Reviews from customers ({count})",
   "ProfilePage.schemaTitle": "{name} | {marketplaceName}",
